<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">北美宠物网</string>
    
    <string name="no_content_available">没有内容显示</string>
    <string name="article_pic">article_pic</string>
    <string name="loading">加载中</string>
    
    <!-- menus -->
    <string name="action_logout">登出</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_like">赞</string>
    <string name="action_share">分享</string>
    <string name="action_notification">消息</string>

    <!-- Home page -->
    <string name="page_title_article">文章</string>
    <string name="page_title_enquiry">提问</string>
    <string name="page_title_ask">问题</string>
    <string name="viewpager_title_section2">文章列表</string>
    <string name="viewpager_title_section1">宠物提问</string>
    <string name="viewpager_title_section3">宠物用品</string>
    <string name="viewpager_title_section4">我的信息</string>
    <string name="label_my_enquiry">我的提问</string>
    <string name="label_all_enquiry">所有提问</string>
    
    <!-- Login page  -->
    <string name="token_login_info">Token 信息：</string>
    <string name="button_login_logout">注销</string>
    <string name="button_login_login">登录</string>
    <string name="link_login_signup">还没有帐号？点这里注册!</string>
    <string name="label_login_password">密码</string>
    <string name="label_login_username">用户名 或 电子邮箱</string>
    
    <!-- Signup page  -->
    <string name="label_reg_email">电子邮箱</string>
    <string name="label_reg_username">用户名</string>
    <string name="label_username_format">用户名只能包含 英文字母、数字和下划线</string>
    <string name="label_reg_password">密码</string>
    <string name="label_reg_password_confirm">再次输入密码</string>
    <string name="button_reg_signup">注册</string>
    <string name="link_reg_login">已经注册？点这里登录！</string>
    
    
    <!-- Profile page  -->
    <string name="label_username">用户名</string>
    <string name="label_nickname">昵 称</string>
    <string name="label_email">邮箱</string>
    <string name="label_postcode">邮编</string>
    <string name="label_city">城市</string>
    <string name="label_weibo_name">微博名</string>
    <string name="label_gender">性别</string>
    <string name="label_phone">电话</string>
    <string name="label_birthday">生日</string>
    <string name="label_my_pets">我的宠物</string>
    <string name="label_my_enquiries">我的提问</string>
    <string name="label_my_comment_articles">我评论过的文章</string>
    <string name="label_my_like_articles">我赞过的文章</string>
    <string name="label_my_favorites">我的收藏</string>
    <string name="label_my_petfriends">我的宠物好友</string>
    <string name="label_setting">设置</string>
    <string-array name="spinner_gender">
		<item>男</item>
		<item>女</item>
	</string-array>
    
    
    <!-- Pet Info page  -->
    <string name="label_petname">宠物名字</string>
    <string name="label_petspecies">类别</string>
    <string name="label_petbreed">品种</string>
    <string name="label_pet_bday">宠物生日</string>
    <string name="label_pet_neuterage">绝育年龄</string>
    <string name="label_petsex">性别</string>
    <string name="label_petinsurance">保险公司</string>
    <string name="label_pet_age">年龄</string>
    
    <!-- Enquiry post page -->
    <string name="prompt_please_select">请选择</string>
    <string-array name="pet_diet_selection">
        <item>商业粮 commercial</item>
        <item>自制粮 home-made</item>
    </string-array>
    <string-array name="pet_mentation">
        <item>安静 (QAR)</item>
        <item>正常 (BAR)</item>
        <item>低迷 Depressed</item>
        <item>迟钝 Obtunded</item>
        <item>昏迷 Comatose</item>
    </string-array>
    <string-array name="pet_appetite">
        <item>正常 Normal</item>
        <item>比原来差 Decreased appetite</item>
        <item>食欲差 Poor appetite</item>
        <item>完全不进食 No appetite</item>
    </string-array>
    <string-array name="pet_bowel_movement">
        <item>正常 Normal</item>
        <item>便秘 Constipated</item>
        <item>干燥 Dry</item>
        <item>拉稀 Diarrhea</item>
    </string-array>
    <string-array name="image_action_array">
        <item>从相册选择</item>
        <item>新拍一张照片</item>
    </string-array>
    
    <!-- Notification Page -->
    <string name="no_new_notifications">暂时没有新的消息</string>
    
    <!-- Share panel -->
    <string name="label_weibo">微博</string>
    <string name="label_weixin">微信</string>
    <string name="label_facebook">Facebook</string>
    
    
    <!--resource for reading Json objects --> 
    <string name = "JSON_tag_title">title</string>
    <string name = "JSON_tag_image">img</string>
    <string name = "JSON_tag_id">id</string>
    <string name = "JSON_tag_queryid">queryid</string>
    <string name = "JSON_tag_tag">tag</string>
    <string name = "JSON_tag_tags">tags</string>
    <string name = "JSON_tag_time">time</string>
    <string name = "JSON_tag_date">date</string>
    <string name = "JSON_tag_content">content</string>
    <string name = "JSON_tag_snapshot">snapshot</string>
    <string name = "JSON_tag_owner">owner</string>
    <string name = "JSON_tag_author">author</string>
    <string name = "JSON_tag_maintag">maintag</string>
    <string name = "JSON_tag_list">list</string>
    <string name = "JSON_tag_result">result</string>
    <string name = "JSON_tag_status">status</string>
    <string name = "JSON_tag_avatar">useravatar</string>
    <string name = "JSON_tag_maintag_cn">maintag_cn</string>
    <string name = "JSON_tag_ownername">ownername</string>
    <string name = "JSON_tag_username">username</string>
    <string name = "JSON_tag_password">password</string>
    <string name = "JSON_tag_login">login</string>
    <string name = "JSON_tag_error">error</string>
    <string name = "JSON_tag_errorMessage">errorMsg</string>
    <string name = "JSON_tag_admin">admin</string>
    <string name = "JSON_tag_petavatar">avatar</string>
    <string name = "JSON_tag_petname">name</string>
    <string name = "JSON_tag_petsex">sex</string>
    <string name = "JSON_tag_petspecies">species</string>
    <string name = "JSON_tag_petbreed">breed</string>
    <string name = "JSON_tag_petneuterage">desex</string>
    <string name = "JSON_tag_petbday">birth</string>
    <string name = "JSON_tag_petinsurance">insurance</string>
    <string name = "JSON_tag_petid">id</string>
    <string name = "JSON_tag_petflea">flea</string>
    <string name = "JSON_tag_petdeworm">deworm</string>
    <string name = "JSON_tag_petvaccination">vaccination</string>
    <string name = "JSON_tag_pet_enquiry_authorname">authorname</string>
    <string name = "JSON_tag_pet_enquiry_authoravatar">authoravatar</string>
    <string name = "JSON_tag_pet_enquiry_petid">petid</string>
    <string name = "JSON_tag_pet_enquiry_diettype">diettype</string>
    <string name = "JSON_tag_pet_enquiry_dietdescr">dietdescr</string>
    <string name = "JSON_tag_pet_enquiry_responsive">responsive</string>
    <string name = "JSON_tag_pet_enquiry_stool">stool</string>
    <string name = "JSON_tag_pet_enquiry_weight">weight</string>
    <string name = "JSON_tag_pet_enquiry_appetite">appetite</string>

    

</resources>
