<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
 
        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/signup_activity_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:orientation="horizontal">
                <!-- Logo Start-->
                
                <!-- Logo Ends -->
                
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout 
            android:id="@+id/signup_activity_footer"
                android:layout_width="fill_parent"
                android:layout_height="60dip"
                
                android:layout_alignParentBottom="true"
                android:orientation="vertical">
        </LinearLayout>
        <!-- Footer Ends -->
 
        <!-- Registration Form -->
        <LinearLayout
          android:id="@+id/signup_activity_body"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="20dip"
          android:layout_below="@id/header">
          <!-- Full Name Label -->
          <TextView 
              	android:id="@+id/signup_activity_reg_username_label" 
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_reg_username"
                android:padding="3dp"
                android:textSize="18sp"/>
          <EditText 
                android:id="@+id/signup_activity_reg_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:padding="3dp"
                android:textColor="@color/Black"
                android:textSize="18sp"
                android:background="@drawable/textlines"/>
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_username_format"
                android:padding="3dp"
                android:textSize="12sp"/>
          <!--  Email Label -->
          <TextView
              	android:id="@+id/signup_activity_reg_email_label" 
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_reg_email"
                android:padding="3dp"
                android:textSize="18sp"/>
          
          <EditText android:id="@+id/signup_activity_reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="@color/Black"
                android:background="@drawable/textlines"/>
          <!-- Password Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_reg_password"
                android:padding="3dp"
                android:textSize="18sp"/>
          <EditText 
                android:id="@+id/signup_activity_reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="@color/Black"
                android:background="@drawable/textlines"/>
          <!-- Password Confirmation Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_reg_password_confirm"
                android:padding="3dp"
                android:textSize="18sp"/>
          <EditText 
                android:id="@+id/signup_activity_reg_password_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="@color/Black"
                android:background="@drawable/textlines"/>
        </LinearLayout>
        <LinearLayout 
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="20dip"
              android:layout_above="@id/signup_activity_footer"
              android:layout_below="@id/signup_activity_body">
          <!-- Register Button -->
	          <Button android:id="@+id/signup_activity_button_register"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dip"
	                android:textSize="18sp"
	                android:text="@string/button_reg_signup"
	                android:textColor="@color/White"/>
	          <!-- Link to Login Screen -->
	          <TextView android:id="@+id/signup_activity_link_to_login"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="20dip"
	                android:text="@string/link_reg_login"
	                android:gravity="center"
	                android:textSize="15dip"
	                android:textColor="@color/Blue"/>
 		  </LinearLayout>
        <!-- Registration Form Ends -->
  </RelativeLayout>
</ScrollView>