<?xml version="1.0" encoding="utf-8"?>
<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff"
        >
 
        <!--  Header  Starts-->
        <RelativeLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                
                android:paddingTop="5dip"
                android:paddingBottom="5dip">
                <!-- Logo Start-->
                <!-- Logo Ends -->

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="PIA logo"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_pia_logo_large_w_text" />

        </RelativeLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout 
            	android:id="@+id/footer"
                android:layout_width="fill_parent"
                android:layout_height="60dip"
                
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">
        </LinearLayout>
        <!-- Footer Ends -->
 
        <!-- Login Form -->
        <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="20dip"
          android:layout_below="@id/header">
          <!--  Email Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/label_login_username"
                android:textSize="18sp"/>
          <EditText
              	android:id="@+id/login_username" 
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:inputType="text"
                android:singleLine="true"
                android:text="naoh.zeng@gmail.com"
                android:textColor="@color/Black"
                android:background="@drawable/textlines"
                android:padding="3dp"
                android:textSize="18sp"/>
          <!--  Password Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/label_login_password"
                android:textSize="18sp"/>
          <EditText 
              	android:id="@+id/login_password"
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/Black"
                android:text="12789321"
                android:textSize="18sp"
                android:padding="3dp"
                android:background="@drawable/textlines"
                />
          <!-- Login button -->
          <Button android:id="@+id/button_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:text="@string/button_login_login"
                android:textColor="@color/Red"
                android:textSize="18sp"/>
         <com.sina.weibo.sdk.widget.LoginButton
            android:id="@+id/button_login_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            />
          
          <!-- Link to Registration Screen -->
          <TextView android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="20dip"
                android:text="@string/link_login_signup"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/Blue"/>
 
        </LinearLayout>
        <!-- Login Form Ends -->
        
  </RelativeLayout>
</ScrollView>